src/test/ui/issues/issue-10536.stderr
error: macros that expand to items must either be surrounded with braces or followed by a semicolon
  --> $DIR/issue-10536.rs:16:22
   |
LL |     assert!({one! two()});
   |                      ^^

error: expected `(` or `{`, found `}`
  --> $DIR/issue-10536.rs:21:22
   |
LL |     assert!({one! two});
   |                      ^ expected `(` or `{`

error: aborting due to 2 previous errors

